2003-10-29  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java:  Re-implement namespaces to preserve
	namespace info using a chain of NamespaceBindings.
	* ParsedXMLToConsumer.java (emitEndElement):  Don't allocate a
	String for the end tag.
	* XMLPrinter.java:  Print out namespace declarations.

2003-10-28  Per Bothner  <per@bothner.com>

	* NamespaceBinding.java:  New class.
	* XName.java:  New class.
	* Makefile.am (java_sources): Update accordingly.

2003-10-28  Per Bothner  <per@bothner.com>

	* Makefile.am (DONE_EDIT_SUBS):  Move from ../../Make-rules.
	Simplify to not insert extra line.  This matches build.xml and more
	importantly avoids a GNU sed feature (missing in Mac OSX Panther sed).

2003-09-09  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java (<init>):  Only use output TreeList
	directly if it's a NodeList - not if it's a SortedNodes, say.

2003-08-03  Per Bothner  <per@bothner.com>

	* NodeTree.java (nextPos):  New method.  Allows client simplification.

2003-08-01  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (setStyle):  Default htmlCompat to false.

2003-07-23  Per Bothner  <per@bothner.com>

	* NodeTree.java (stableCompare): New method.
	(getId):  New method.
	(id, counter):  New fields used by getId.

2003-07-10  Per Bothner  <per@bothner.com>

	* NodeTree.java:  New class, extends TreeList.
	* Makefile.am (java_sources):  Add NodeTree.java.

	* XMLPrinter.java (writeObject):  Don't call closeTag if parameter
	is SeqPosition or Consumable and not UnescapedData.

2003-06-27  Per Bothner  <per@bothner.com>

	* NamespaceResolver.java:  Removed - functionality merged with
	ParsedXMLToConsumer.java.
	* Makefile.am (java_sources):  Update accordingly.
	* ParsedXMLToConsumer.java:  Merge in NamespaceResolver functionality,
	but hopefully more efficient.  This is a major re-write.
	(class MappingInfo):  New helper class.

2003-05-30  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (toString):  New utility function.
